--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.25.1",
+    "react-hook-form": "^7.25.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
     "styled-system": "^5.1.5",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -43,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.21",
+    "react-router": "^6.2.1",
+    "styled-components": "^5.3.3"
   }
 }
