--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.25.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "style-components": "^0.1.0",
     "styled-system": "^5.1.5",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
