--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@callstack/react-theme-provider": "^3.0.7",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/utils": "^4.11.2",
     "@mui/material": "^5.3.1",
     "@mui/styled-engine-sc": "^5.3.0",
     "@react-icons/all-files": "^4.1.0",
@@ -15,18 +15,19 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
     "@types/react-lottie": "^1.2.6",
-    "lottie-react-web": "^2.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "lottie-react": "^2.2.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-hook-form": "^7.25.3",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
-    "style-components": "^0.1.0",
+    "react-update": "^0.4.4",
     "styled-system": "^5.1.5",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -56,7 +57,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.21",
+    "@types/styled-system": "^5.1.15",
     "react-router": "^6.2.1",
     "styled-components": "^5.3.3"
   }
