--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/utils": "^4.11.2",
-    "@mui/material": "^5.3.1",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
     "@mui/styled-engine-sc": "^5.3.0",
+    "@mui/x-data-grid": "^5.4.0",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
