--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/utils": "^4.11.2",
@@ -21,11 +22,14 @@
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "lottie-react": "^2.2.1",
+    "mdbootstrap": "^4.20.0",
+    "next": "^12.0.10",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hook-form": "^7.25.3",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
+    "react-query": "^3.34.12",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
