--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/utils": "^4.11.2",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
@@ -21,16 +23,22 @@
     "@types/react-lottie": "^1.2.6",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
+    "axios": "^0.25.0",
+    "bootstrap": "5.1.3",
+    "cors": "^2.8.5",
     "lottie-react": "^2.2.1",
     "mdbootstrap": "^4.20.0",
+    "mui-datatables": "^4.0.0",
     "next": "^12.0.10",
     "react": "^16.14.0",
+    "react-bootstrap": "^2.1.2",
+    "react-data-table-component": "^7.4.7",
     "react-dom": "^16.14.0",
     "react-hook-form": "^7.25.3",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-query": "^3.34.12",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
     "react-update": "^0.4.4",
@@ -64,6 +72,7 @@
   },
   "devDependencies": {
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.21",
     "@types/styled-system": "^5.1.15",
     "react-router": "^6.2.1",
