--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "lottie-react": "^2.2.1",
     "mdbootstrap": "^4.20.0",
+    "moment": "^2.29.1",
     "mui-datatables": "^4.0.0",
     "next": "^12.0.10",
     "pnp-webpack-plugin": "^1.7.0",
@@ -40,7 +41,7 @@
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-query": "^3.34.12",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
     "react-update": "^0.4.4",
