--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mui/styled-engine-sc": "^5.3.0",
     "@mui/x-data-grid": "^5.4.0",
     "@react-icons/all-files": "^4.1.0",
+    "@restart/ui": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
+    "@types/jquery": "^3.5.13",
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-lottie": "^1.2.6",
@@ -35,12 +37,15 @@
     "pnp-webpack-plugin": "^1.7.0",
     "react": "^16.14.0",
     "react-bootstrap": "^2.1.2",
+    "react-confirm-alert": "^2.8.0",
     "react-data-table-component": "^7.4.7",
     "react-dom": "^16.14.0",
     "react-hook-form": "^7.25.3",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
+    "react-modal-bootstrap": "^1.1.1",
     "react-query": "^3.34.12",
+    "react-responsive-modal": "^6.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
